# MyNotes

./: .gitignore
Basso livello Appunti/: Definizioni Varie.md  DefinizioniPeriferiche.md
CMake/: Introduction.md
CMake/Example/ExecutableExample/: CMakeLists.txt  main.cpp  tutorial_CMake.h.in
CMake/Example/LibraryExample/: CMakeLists.txt
CMake/Example/LibraryExample/include/: myclass.h
CMake/Example/LibraryExample/src/: myclass.cpp
CSS/: 1.0-Introduzione.md  1.1-Concetti_base.md  1.10.0-Immagini, media ed elementi di forma.md  1.11.0-StileTabelle.md  1.2-Cascata_eredità.md  1.3-Selettori.md  1.3.0-Selettori.md  1.3.1-SelettoriClassi.md  1.3.2-SelettoriAttributi.md  1.3.3-SelettoriPseudoClassi.md  1.3.4-SelettoriCombinatori.md  1.4.0-BoxModel.md  1.4.1-MarginiPadding.md  1.5.0-Background-Bordi.md  1.6.0-Direzione Testo.md  1.7.0-Contenuto_in_Overflow.md  1.8.0-UnitàDiMisuraValori.md  1.9.0-DimensionamentoElementi.md  2.0-OrganizzazioneCodice.md  3.0-StileDelTesto_basi.md  3.1-StileDelTesto_liste.md  3.2-StileDelTesto_link.md  4.0-WebFont.md
Django Appunti/: 1.Primi passi con django.md  2.Django database and models.md  3.Views & Template.md  4.FileStatici.md  5.PersonalizzareModuloAdmin.md  6.Views-to-Pdf.md  7.Pagination_&_Filtering.md  9.Bitnami Django_virtual_machine.md
Embedded systems/: 1.0 Introduzione Sistemi Embedded.md  10.0 Timer  Counter.md  11.0 Interrupt.md  2.0 Processore.md  3.0 Architetture.md  4.0 Strumenti e periferiche.md  5.0 Microcontrollore 8051.md  6.0 Programmazione IO.md  7.0 Termini.md  8.0 Registri.md  9.0 Registri BankStack.md
Excel Vari/: VittoriaSQuadre.xlsx  scommesseVarie.xlsx
FreeRTOS/: 1.0 Intoduction.md  1.1 Standard di codifica e  guida allo stile.md  1.2 RTOS concetti base.md  10.0 Memory management.md  11.0 Developer Support.md  2.0 MultiTasking - Task introduzione .md  2.1 Multitasking - Task stati priorità e implementazione.md  2.2 Multitasking - Co-Routine.md  2.3 MultiTasking - Scheduling Algorithms.md  2.4 Idle Task.md  3.0 Queues.md  3.1 Queues Set.md  3.2 Queue to Create a Mailbox.md  4.0 Binary Semaphores.md  4.1 Binary Semaphores - Mutex.md  5.0 RTOS Task Notifications.md  5.1 Task Notifications used As Binary Semaphores.md  5.2 Task Notifications used as Event Group.md  5.3 Task Notifications used as Mailbox.md  6.0 Stream & Message Buffers.md  6.1 ISR TO Task Streams.md  6.2 Core to Core Messages.md  7.0 Software timers.md  7.1 Software timers API.md  8.0 Using the FreeRTOS API from an ISR.md  9.0 Event Groups (or Flags).md  FreeRTOSConfig.md  Queues.md
(+218 files in other folders)
